--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,10 @@
 :root {
   --overlay-transparent: rgba(151, 126, 126, 0.7);
   --html-bg: #977e7e;
-  --bg-secondary: rgba(234, 234, 234, 1);
-  /* --black: #161f27; */
+  --bg-secondary: #f2f2f2;
+  --none: rgba(0, 0, 0, 0);
   --black: #000;
+  --black-half: rgba(0, 0, 0, 0.75);
   --white: #fff;
   --btn-white: #fff;
   --red: #e4012a;
@@ -22,7 +23,7 @@
   --grey: #e7eaef;
   --light: #202e3a;
   --svg-black: #000;
-  --svg-white: #f2f2f2;
+  --svg-white: #dadada;
   --svg-red: #e4002b;
   --svg-pink: #ff6584;
   --svg-grey: #3f3d56;
@@ -31,7 +32,7 @@
   --svg-peach-light: #ffb8b8;
   --svg-brown-light: #a0616a;
   --svg-cream: #cccccc;
-  --svg-cream2: ##e6e6e6;
+  --svg-cream2: #e6e6e6;
   --drop-shadow: rgba(22, 31, 39, 0.5);
   --drop-shadow-dark: rgba(22, 31, 39, 0.8);
   --drop-shadow-red: rgba(228, 1, 42, 0.5);
@@ -109,10 +110,6 @@
   fill: var(--red);
 }
 
-.icon-fill {
-  fill: var(--red);
-}
-
 .icon-spacer {
   display: block;
   height: 1.5rem;
@@ -131,6 +128,10 @@
   margin-right: 0.5rem;
 }
 
+.with-icon h1 {
+  margin-left: 0.5rem;
+}
+
 .icon g {
   display: flex;
   align-items: center;
@@ -138,6 +139,12 @@
   stroke-width: 1px;
   height: 1.5rem;
   opacity: 1;
+}
+
+.icon-fill g {
+  fill: var(--red);
+  stroke: var(--none);
+  stroke-width: 1px;
 }
 
 .active {
@@ -452,15 +459,15 @@ body {
 
 #pages {
   width: 100%;
-  padding: 1rem;
+  padding: 0 1rem;
   background-color: var(--white);
 }
 
 .page {
-  min-height: 74vh;
+  min-height: 72vh;
   max-width: 90%;
-  margin: 14vh auto;
-  /* padding: 1rem; */
+  margin: 12vh auto;
+  padding: 1rem 0;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -512,10 +519,10 @@ body {
 .modal {
   position: fixed;
   top: 12vh;
+  top: calc(12vh + 4px);
   bottom: 10vh;
   left: 0;
-  width: 95%;
-  max-width: 375px;
+  width: 100%;
   z-index: 101;
   transform: none;
   animation: slide-in 250ms forwards ease-in-out;
@@ -580,6 +587,10 @@ body {
 #header h2 {
   text-align: center;
   margin: 0 auto;
+}
+
+#header-dummy {
+  visibility: hidden;
 }
 
 #header .icon {
@@ -765,7 +776,7 @@ body {
 }
 
 .more .icon g {
-  stroke: black;
+  stroke: var(--black);
   fill: none;
   transition: 50ms linear;
 }
@@ -813,11 +824,11 @@ body {
 }
 
 #search-form .selected p {
-  color: var(--white);
+  color: var(--btn-white);
 }
 
 #search-form .selected .icon g {
-  stroke: var(--white);
+  stroke: var(--btn-white);
 }
 
 #search-form ul {
@@ -865,6 +876,10 @@ body {
 /********************* Search Results **********************/
 /***********************************************************/
 
+#search-results {
+  padding-top: 0;
+}
+
 .date {
   color: var(--black);
   font-weight: normal;
@@ -886,7 +901,8 @@ body {
 /* also in SelectionJSX */
 .date-picker,
 .date-picker-left {
-  max-width: 300px;
+  width: 100%;
+  max-width: 400px;
   margin: 0 auto;
   padding: 0 1rem;
   display: flex;
@@ -957,7 +973,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* border: 1px solid var(--black); */
+  border: 1px solid var(--black-half);
   border-radius: 0.3rem;
   background-color: var(--white);
   filter: drop-shadow(2px 2px 3px var(--drop-shadow));
@@ -987,10 +1003,15 @@ body {
 
 .preview-info {
   width: 90%;
+  font-size: 0.9rem;
   padding: 0.5rem 0.5rem 0 0.75rem;
-  /* border: 1px solid var(--black); */
+  border: 1px solid var(--black-half);
   border-radius: 0.3rem;
   background-color: var(--bg-secondary);
+}
+
+span.preview-info {
+  padding: 0;
 }
 
 .preview-info hr {
@@ -1035,6 +1056,7 @@ body {
 
 #selection {
   max-width: 600px;
+  padding-top: 0;
 }
 
 #selection form {
@@ -1057,8 +1079,8 @@ body {
   padding: 0;
   justify-content: space-evenly;
   background-color: var(--white);
-  width: 100%;
-  border: none;
+  max-width: 250px;
+  /* border: none; */
 }
 
 #selection .item select {
@@ -1084,7 +1106,11 @@ body {
   width: 100%;
   max-width: 250px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: start;
+}
+
+#selection ul li {
+  margin: 0 0.35rem;
 }
 
 #selection .btn-small {
@@ -1106,8 +1132,7 @@ body {
 #appt-confirmed {
   padding: 1rem;
   width: 100%;
-  height: 100%;
-  max-height: 78vh;
+  height: 78vh;
   background-color: var(--white);
 }
 
@@ -1119,36 +1144,94 @@ body {
   }
 }
 
+#svg-create-account {
+  margin-top: 1.5rem;
+}
+
 #login-form form,
 #confirm-info form {
   width: 100%;
-  margin-top: 1rem;
+  margin-top: 2rem;
+}
+
+#login-form .with-icon {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 290px;
+  justify-content: center;
+}
+
+#login-form input {
+  max-width: 283px;
 }
 
 #login-form p {
   text-align: center;
 }
 
+#login-form .with-icon.pw-requirements {
+  padding-top: 0;
+  justify-content: start;
+  align-items: start;
+  transform: translateY(-0.5rem);
+}
+
+#login-form .icon-spacer {
+  height: 0.5rem;
+}
+
+#login-form .error {
+  text-align: center;
+}
+
+#login-form label {
+  display: none;
+}
+
+#signup-or-login {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#signup-or-login h2 {
+  margin-left: 0.5rem;
+  border-bottom: 1px solid var(--black-half);
+}
+
+#confirm-info .with-icon {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 290px;
+}
+
 #confirm-info .input-div {
   width: 100%;
 }
 
+#confirm-info label {
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
 #appt-confirmed {
-  height: auto;
-  padding: 2rem 0;
+  padding: 1rem 0 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
 #appt-confirmed .with-icon {
   margin-bottom: 1rem;
-  margin-left: 1rem;
+  max-width: 290px;
 }
 
 #appt-confirmed svg {
   transform: translateX(-5%);
+  max-height: 350px;
 }
 
 /***********************************************************/
@@ -1188,7 +1271,7 @@ body {
 }
 
 #appointments-list {
-  padding-top: 3rem;
+  padding-top: 1.5rem;
   min-height: 72vh;
   width: auto;
 }
@@ -1199,12 +1282,9 @@ body {
   }
 }
 
-.preview-info {
-  font-size: 0.9rem;
-}
-
-span.preview-info {
-  padding: 0;
+#appointments .preview-info {
+  border: none;
+  padding: 0.25rem 0;
 }
 
 .appt-item {
@@ -1216,7 +1296,7 @@ span.preview-info {
   border-radius: 0.6rem;
   border: 1px solid var(--black);
   filter: drop-shadow(2px 2px 3px var(--drop-shadow));
-  background-color: var(--white);
+  background-color: var(--bg-secondary);
 }
 
 .appt-btn,
@@ -1260,7 +1340,7 @@ span.preview-info {
 #account-header {
   margin: 1rem auto 2rem;
   width: 100%;
-  max-width: 450px;
+  max-width: 350px;
 }
 
 #account-header h1 {
@@ -1268,10 +1348,10 @@ span.preview-info {
   text-align: left;
 }
 
-#account-items-list {
+#account-fields-list {
   margin: 0 auto;
   padding: 1rem;
-  max-width: 500px;
+  max-width: 350px;
 }
 
 #account .item {
@@ -1285,6 +1365,10 @@ span.preview-info {
   grid-template-columns: 0.3fr 1fr 0.5fr 0.5fr;
 }
 
+#account .item-top p {
+  margin-top: 0.35rem;
+}
+
 #account .item-text {
   overflow: hidden;
 }
@@ -1296,6 +1380,10 @@ span.preview-info {
 #account .btn-small g {
   stroke: var(--black);
   opacity: 1;
+}
+
+.account-item-btn {
+  filter: none;
 }
 
 @media (hover: hover) {
