conditionally render appointmentconfirmed contents

--- a/src/index.css
+++ b/src/index.css
@@ -1234,6 +1234,15 @@ span.preview-info {
   max-height: 350px;
 }
 
+#booking-error {
+  width: 100%;
+  max-width: 350px;
+}
+
+#booking-error p {
+  margin-bottom: 2rem;
+}
+
 /***********************************************************/
 /********************* Appointments ************************/
 /***********************************************************/
