moved altert modal to top, fixed available appointment time bug

--- a/src/index.css
+++ b/src/index.css
@@ -1783,7 +1783,7 @@ ol {
 #alert-modal {
   pointer-events: none;
   position: fixed;
-  top: 90px;
+  top: 0;
   left: 0;
   width: 100%;
   z-index: 102;
