--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,9 @@
   --bg-secondary: #f2f2f2;
   --none: rgba(0, 0, 0, 0);
   --black: #000;
-  --black-half: rgba(0, 0, 0, 0.75);
+  --black-3q: rgba(0, 0, 0, 0.75);
+  --black-half: rgba(0, 0, 0, 0.5);
+  --black-quarter: rgba(0, 0, 0, 0.25);
   --white: #fff;
   --btn-white: #fff;
   --red: #e4012a;
@@ -24,6 +26,7 @@
   --light: #121b22;
   --svg-black: #000;
   --svg-white: #dadada;
+  --svg-white-full: #fff;
   --svg-red: #e4002b;
   --svg-pink: #ff6584;
   --svg-grey: #3f3d56;
@@ -58,6 +61,9 @@
 }
 .svg-white {
   fill: var(--svg-white);
+}
+.svg-white-full {
+  fill: var(--svg-white-full);
 }
 .svg-red {
   fill: var(--svg-red);
@@ -351,7 +357,7 @@ input {
   max-width: 283px;
   height: 2.5rem;
   max-height: 40px;
-  border: 2px solid var(--black);
+  border: 1px solid var(--black);
   border-radius: 0.6rem;
   font-weight: bold;
   font-size: 0.9rem;
@@ -726,6 +732,8 @@ body {
 #welcome-logo {
   padding-left: 2rem;
   width: 100%;
+  max-width: 70%;
+  align-self: start;
 }
 
 #welcome .center {
@@ -781,7 +789,7 @@ body {
   margin-bottom: 1rem;
   padding: 0.35rem;
   border-radius: 0.6rem;
-  border: 1px solid var(--black);
+  border: 1px solid var(--black-quarter);
   filter: drop-shadow(2px 2px 3px var(--drop-shadow));
   background-color: var(--white);
   transition: 50ms linear;
@@ -932,10 +940,10 @@ body {
   justify-content: space-evenly;
   align-items: center;
   height: 2rem;
-  border: 1px solid var(--black);
+  border: 1px solid var(--black-quarter);
   border-radius: 0.3rem;
   background-color: var(--bg-secondary);
-  filter: drop-shadow(2px 2px 3px var(--drop-shadow));
+  filter: drop-shadow(2px 2px 2px var(--drop-shadow));
 }
 
 .date-picker .icon,
@@ -1001,7 +1009,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border: 1px solid var(--black-half);
+  border: 1px solid var(--black-quarter);
   border-radius: 0.3rem;
   background-color: var(--white);
   filter: drop-shadow(2px 2px 3px var(--drop-shadow));
@@ -1033,7 +1041,7 @@ body {
   width: 90%;
   font-size: 0.9rem;
   padding: 0.5rem 0.5rem 0 0.75rem;
-  border: 1px solid var(--black-half);
+  border: 1px solid var(--black-quarter);
   border-radius: 0.3rem;
   background-color: var(--bg-secondary);
 }
@@ -1084,12 +1092,17 @@ span.preview-info {
 
 #selection {
   max-width: 600px;
-  padding-top: 0;
+  padding-top: 1rem;
 }
 
 #selection form {
   margin: 1rem auto 0;
+  padding: 0.5rem;
   max-width: 450px;
+  background: var(--bg-secondary);
+  border-radius: 0.6rem;
+  border: 1px solid var(--black-quarter);
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.15);
 }
 
 #selection .item {
@@ -1345,6 +1358,9 @@ span.preview-info {
 
 #appointments .preview-info {
   border: none;
+}
+
+#appointments .preview-info p {
   padding: 0.25rem 0;
 }
 
@@ -1355,7 +1371,7 @@ span.preview-info {
   margin: 0 auto 1rem;
   padding: 1rem;
   border-radius: 0.6rem;
-  border: 1px solid var(--black);
+  border: 1px solid var(--black-quarter);
   filter: drop-shadow(2px 2px 3px var(--drop-shadow));
   background-color: var(--bg-secondary);
 }
@@ -1517,6 +1533,7 @@ span.preview-info {
 #nav-click {
   z-index: 2;
   width: 80%;
+  height: 100%;
   max-width: 750px;
   position: absolute;
   top: 50%;
@@ -1529,17 +1546,18 @@ span.preview-info {
 
 #nav-click {
   z-index: 3;
-  width: 100%;
+  width: 80%;
 }
 
 .real-link {
   cursor: pointer;
   width: 4rem;
-  height: 4rem;
+  height: 100%;
 }
 
 .nav-link {
   pointer-events: none;
+  padding: 1rem;
 }
 
 .navbar-default .icon {
@@ -1587,7 +1605,7 @@ ol {
 }
 
 .switches li:not(:last-child) {
-  border-bottom: 1px solid var(--grey);
+  border-bottom: 1px solid var(--black-quarter);
 }
 
 .switches li::before {
