--- a/src/index.css
+++ b/src/index.css
@@ -490,15 +490,27 @@ body {
   border: 1px solid red;
 }
 
-#footer {
-  z-index: 2;
+#footer-wrapper {
   position: fixed;
-  bottom: 0;
+  z-index: 10;
+  bottom: -8vh;
   left: 0;
   width: 100%;
   height: 10vh;
+  transition: 100ms linear;
+}
+
+#footer-wrapper.expanded {
+  bottom: 0;
+}
+
+#footer {
+  z-index: 1;
+  width: 100%;
+  height: 100%;
   border-top: 4px solid var(--red);
   background-color: var(--white);
+  transform: translateZ(1px);
 }
 
 .overlay {
@@ -1568,10 +1580,24 @@ span.preview-info {
 /***********************************************************/
 /************************ Navbar ***************************/
 /***********************************************************/
-
+/* 
 #info-footer {
   position: fixed;
   bottom: 80px;
+} */
+
+#footer-expand {
+  position: absolute;
+  z-index: -1;
+  right: -4px;
+  top: -1rem;
+  border: 4px solid var(--red);
+  border-radius: 0.6rem;
+  background: var(--white);
+}
+
+#footer-expand svg {
+  height: 0.8rem;
 }
 
 #navbar,
