--- a/src/index.css
+++ b/src/index.css
@@ -478,7 +478,7 @@ body {
 }
 
 .page {
-  min-height: 72vh;
+  min-height: 88vh;
   max-width: 90%;
   margin: 12vh auto;
   padding: 1rem 0;
@@ -487,30 +487,6 @@ body {
   justify-content: space-evenly;
   background-color: var(--white);
   transition: 100ms linear;
-  border: 1px solid red;
-}
-
-#footer-wrapper {
-  position: fixed;
-  z-index: 10;
-  bottom: -8vh;
-  left: 0;
-  width: 100%;
-  height: 10vh;
-  transition: 100ms linear;
-}
-
-#footer-wrapper.expanded {
-  bottom: 0;
-}
-
-#footer {
-  z-index: 1;
-  width: 100%;
-  height: 100%;
-  border-top: 4px solid var(--red);
-  background-color: var(--white);
-  transform: translateZ(1px);
 }
 
 .overlay {
@@ -664,14 +640,22 @@ body {
   opacity: 1;
 }
 
-.menu-icon {
+#menu-icon-wrapper {
+  cursor: pointer;
   position: absolute;
-  right: 1.4rem;
+  right: 1.25rem;
   top: 50%;
   transform: translateY(-50%);
   z-index: 7;
+  width: 2.5rem;
+  height: 2.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu-icon {
   height: 1rem;
-  cursor: pointer;
   stroke: var(--red);
   transition: 150ms ease-in-out;
 }
@@ -748,10 +732,10 @@ body {
 }
 
 #welcome-logo {
-  padding-left: 2rem;
+  /* padding-left: 2rem; */
   width: 100%;
   max-width: 350px;
-  align-self: start;
+  /* align-self: start; */
 }
 
 #welcome .center {
@@ -1193,7 +1177,7 @@ span.preview-info {
 #appt-confirmed {
   padding: 1.5rem;
   width: 100%;
-  height: 78vh;
+  height: 88vh;
   background-color: var(--white);
 }
 
@@ -1371,7 +1355,7 @@ span.preview-info {
 
 #appointments {
   max-width: 600px;
-  min-height: 78vh;
+  min-height: 88vh;
 }
 
 #appointments .tabs {
@@ -1403,7 +1387,7 @@ span.preview-info {
 
 #appointments-list {
   padding-top: 1.5rem;
-  min-height: 72vh;
+  min-height: 82vh;
   width: auto;
 }
 
@@ -1555,11 +1539,17 @@ span.preview-info {
 /***********************************************************/
 
 #settings {
+  display: block;
   max-width: 400px;
 }
 
 #settings .with-icon {
   padding: 1rem;
+  margin-bottom: 2rem;
+}
+
+#settings .btn {
+  margin-top: 3rem;
 }
 
 /***********************************************************/
@@ -1973,7 +1963,7 @@ ol {
 /***********************************************************/
 
 #error-page {
-  min-height: 78vh;
+  min-height: 88vh;
 }
 
 /***********************************************************/
