--- a/src/index.css
+++ b/src/index.css
@@ -171,6 +171,7 @@
 /***********************************************************/
 
 .click {
+  cursor: pointer;
   margin-left: 0.25rem;
   text-decoration: underline;
 }
@@ -460,12 +461,11 @@ input:invalid,
 
 html {
   width: 100%;
-  background-color: var(--white);
+  background-color: var(--overlay-transparent);
 }
 
 body {
   width: 100%;
-  max-width: 750px;
   margin: 0 auto;
   font-family: 'Roboto', sans-serif;
   color: var(--black);
@@ -489,6 +489,7 @@ body {
 }
 
 #dim {
+  pointer-events: none;
   position: absolute;
   height: 100%;
   width: 100%;
@@ -537,13 +538,11 @@ body {
 
 .modal {
   position: fixed;
-  top: 12vh;
-  top: calc(12vh + 4px);
-  bottom: 10vh;
-  left: 0;
+  top: 51%;
   width: 100%;
+  height: 100%;
   z-index: 101;
-  transform: none;
+  transform: translate(0, -50%);
   animation: slide-in 250ms forwards ease-in-out;
   display: flex;
   justify-content: center;
@@ -562,7 +561,7 @@ body {
 @media (min-width: 650px) {
   .modal {
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     opacity: 0;
   }
   @keyframes slide-in {
@@ -581,17 +580,20 @@ body {
 
 #header-wrapper {
   position: relative;
+  z-index: 5;
   width: 100%;
   max-width: 750px;
+  height: 12vh;
   margin: 0 auto;
+  background-color: var(--white);
 }
 
 #header-main {
   position: relative;
   z-index: 5;
-  height: 12vh;
   width: 100%;
   max-width: 750px;
+  height: 100%;
   margin: 0 auto;
   padding: 0.25rem 1rem;
   display: flex;
@@ -600,28 +602,9 @@ body {
   background-color: var(--white);
 }
 
-#header-middle {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.header-middle-dummy {
-  min-height: 1rem;
-}
-
-#back-btn {
-  position: absolute;
-}
-
 #header h2 {
   text-align: center;
   margin: 0 auto;
-}
-
-#header-dummy {
-  visibility: hidden;
 }
 
 #header .icon {
@@ -639,7 +622,7 @@ body {
   z-index: 4;
   width: 80%;
   max-width: 300px;
-  top: -150%;
+  top: -20rem;
   right: 50%;
   transform: translateX(50%);
   background-color: var(--white);
@@ -662,16 +645,11 @@ body {
 
 .show-menu {
   top: 12vh;
-  top: calc(12vh - 1px);
   opacity: 1;
 }
 
 #menu-icon-wrapper {
   cursor: pointer;
-  position: absolute;
-  right: 1.25rem;
-  top: 50%;
-  transform: translateY(-50%);
   z-index: 7;
   width: 2.5rem;
   height: 2.5rem;
@@ -719,6 +697,7 @@ body {
   text-align: left;
   text-decoration: none;
   color: var(--black);
+  opacity: 0.85;
 }
 
 .header-link.red {
@@ -730,17 +709,11 @@ body {
   stroke: white;
 }
 
-/* @media (hover: hover) {
+@media (hover: hover) {
   .header-link:hover {
-    background-color: var(--red);
+    opacity: 1;
   }
-  .header-link:hover h2 {
-    color: var(--btn-white);
-  }
-
-  .header-link.red:hover {
-  }
-} */
+}
 
 #menu h2 {
   margin: 1rem 0;
@@ -792,14 +765,22 @@ body {
 /***********************************************************/
 
 #search-progress {
-  width: 100%;
+  position: absolute;
+  z-index: 9;
+  left: 50%;
+  bottom: 0;
+  padding: 0 0.5rem;
   font-size: 1rem;
-  text-align: center;
-  transform: scale(0.35);
+  transform: translateX(-60%);
 }
 
 #search-progress span {
   margin: 0 0.5rem;
+  color: var(--black-quarter);
+}
+
+#search-progress span.current {
+  color: var(--black);
 }
 
 #search-form form {
@@ -852,15 +833,15 @@ body {
     color: var(--btn-white);
   }
 
-  .type:hover p {
+  #search-form .type:hover p {
     color: var(--btn-white);
   }
 
-  .type:hover .icon g {
+  #search-form .type:hover .icon g {
     stroke: var(--btn-white);
   }
 
-  .more:hover .icon g {
+  #search-form .more:hover .icon g {
     transform: translateX(0.15rem);
   }
 }
@@ -1215,6 +1196,7 @@ span.preview-info {
   width: 100%;
   max-width: 600px;
   height: 77vh;
+  max-height: 700px;
   background-color: var(--white);
 }
 
@@ -1253,8 +1235,7 @@ span.preview-info {
   z-index: 2;
 }
 
-#login-form form,
-#confirm-info form {
+#login-form form {
   position: relative;
   z-index: 2;
   width: 100%;
@@ -1273,9 +1254,7 @@ span.preview-info {
   max-width: 300px;
 }
 
-#login-form input,
-#confirm-info input {
-  /* max-width: 283px; */
+#login-form input {
   background: var(--white-half);
 }
 
@@ -1313,6 +1292,7 @@ span.preview-info {
 }
 
 .show-password .icon {
+  cursor: pointer;
   height: 0.8rem;
 }
 
@@ -1328,6 +1308,7 @@ span.preview-info {
 }
 
 #signup-or-login h2 {
+  cursor: pointer;
   margin-left: 0.5rem;
   border-bottom: 1px solid var(--black-half);
 }
@@ -1406,7 +1387,6 @@ span.preview-info {
   justify-content: space-evenly;
   align-items: center;
   background-color: var(--white);
-  z-index: 2;
   border-radius: 0.6rem;
 }
 
@@ -1598,7 +1578,10 @@ span.preview-info {
   padding: 0.5rem 1rem;
 }
 
-#faq .show-info {
+@media (hover: hover) {
+  #faq .type:hover .icon g {
+    transform: translateX(0.15rem);
+  }
 }
 
 /***********************************************************/
@@ -1785,9 +1768,10 @@ ol {
 .skeleton-div-column,
 .skeleton-div-row {
   position: relative;
-  margin: 0.5rem 0;
+  margin: 0.5rem auto;
   padding: 0.5rem;
   width: 100%;
+  max-width: 600px;
   border: 1px solid var(--light);
   border-radius: 10px;
   overflow: hidden;
@@ -1998,6 +1982,7 @@ ol {
 
 #error-page {
   min-height: 88vh;
+  max-width: 600px;
 }
 
 /***********************************************************/
