--- a/src/index.css
+++ b/src/index.css
@@ -540,7 +540,6 @@ body {
   position: fixed;
   top: 51%;
   width: 100%;
-  height: 100%;
   z-index: 101;
   transform: translate(0, -50%);
   animation: slide-in 250ms forwards ease-in-out;
@@ -769,7 +768,7 @@ body {
   z-index: 9;
   left: 50%;
   bottom: 0;
-  padding: 0 0.5rem;
+  padding: 0.25rem 0.5rem;
   font-size: 1rem;
   transform: translateX(-60%);
 }
@@ -1041,12 +1040,6 @@ body {
 .location-preview .icon g {
   stroke: var(--black);
   opacity: 1;
-}
-
-@media (hover: hover) {
-  .location-preview:hover .icon {
-    box-shadow: 2px 2px 3px var(--drop-shadow);
-  }
 }
 
 .preview-info {
@@ -1582,78 +1575,6 @@ span.preview-info {
   #faq .type:hover .icon g {
     transform: translateX(0.15rem);
   }
-}
-
-/***********************************************************/
-/************************ Navbar ***************************/
-/***********************************************************/
-/* 
-#info-footer {
-  position: fixed;
-  bottom: 80px;
-} */
-
-#footer-expand {
-  position: absolute;
-  z-index: -1;
-  right: -4px;
-  top: -1rem;
-  border: 4px solid var(--red);
-  border-radius: 0.6rem;
-  background: var(--white);
-}
-
-#footer-expand svg {
-  height: 0.8rem;
-}
-
-#navbar,
-#nav-click {
-  z-index: 2;
-  width: 80%;
-  height: 100%;
-  max-width: 750px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-#nav-click {
-  z-index: 3;
-  width: 80%;
-}
-
-.real-link {
-  cursor: pointer;
-  width: 4rem;
-  height: 100%;
-}
-
-.nav-link {
-  pointer-events: none;
-  padding: 1rem;
-}
-
-.navbar-default .icon {
-  transform: scale(1.1);
-  stroke: var(--red);
-  opacity: 1;
-}
-
-.navbar-active .icon {
-  transform: scale(1.3);
-  stroke: var(--red);
-  opacity: 1;
-}
-
-.navbar-disabled .icon {
-  transform: scale(1.2);
-  stroke: var(--red);
-  opacity: 0.2;
 }
 
 /***********************************************************/
